--- a/templates/goodsDetails.html
+++ b/templates/goodsDetails.html
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 	<meta charset="UTF-8">
 	<script src="static/js/jquery-1.11.3.js" type="text/javascript" charset="utf-8"></script>
 	<script src="static/js/index_jquey.js" type="text/javascript" charset="utf-8"></script>
@@ -19,6 +20,10 @@
 	<link rel="stylesheet" type="text/css" href="static/css/base.css">
 	<link rel="shortcut icon" href="static/img/index/favicon.ico">
 	<link rel="stylesheet" type="text/css" href="static/css/index_1.css">
+    <meta http-equiv="content-type" content="text/html;charset=utf-8">
+		<meta content="always" name="referrer">
+        <meta name="theme-color" content="#2932e1">
+        <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon" />
 <!-- 	<link rel="stylesheet" type="text/css" href="static/css/footer.css"> -->
 <style>
     .body{
@@ -70,25 +75,19 @@ top: 50px;
 </style>
 
 	<title>想喝大可乐</title>
-    	<nav class="nav">
+<nav class="nav">
 			<div class="nav_black">
 					<ul class="nav_black_left">
-						<li><a href="https://www.coca-cola.com.cn/" target="_blank">大可乐</a></li>
+						<li><a href="/" target="_blank">并夕夕商城</a></li>
 						<li>|</li>
-						<li><a href="">可乐</a></li>
-						<li>|</li>
-						<li><a href="">雪碧</a></li>
-						<li>|</li>
-						<li><a href="">脉动</a></li>
-						<li>|</li>
-						<li><a href="">尖叫</a></li>
-						<li>|</li>
-						<li><a href="">农夫山泉</a></li>
-						<li>|</li>
-						<li><a href="">陈泓钇</a></li>
-						<li>|</li>
-						<li><a href="">硫酸</a></li>
-						<li>|</li>
+{#						<li><a href="">可乐</a></li>#}
+{#						<li>|</li>#}
+{#						<li><a href="">雪碧</a></li>#}
+{#						<li>|</li>#}
+{#						<li><a href="">陈泓钇</a></li>#}
+{#						<li>|</li>#}
+{#						<li><a href="">硫酸</a></li>#}
+{#						<li>|</li>#}
 						<li><a href="">问题反馈</a></li>
 						<li>|</li>
 						<li><a href="">Select Region</a></li>
@@ -98,14 +97,10 @@ top: 50px;
 				<div class="nav_black_right">
 					<div class="fr" id="user_mess">
 						<ul>
-
-
-
-
-                            <li><a href="/cal_sub" style="color: red"  id="shopping_num">\__/***购物车（0）</a></li>
-							<li><a href="">消息通知</a></li>
+                            	<li><a href="/cal_sub" style="color: red">\__/***购物车（0）</a></li>
+							<li><a href="/checked_orders">订单中心</a></li>
 							<li>|</li>
-							<li><a  href="/regrist" role="button">注册</a></li>
+							<li><a  href="/regist" role="button">注册</a></li>
 							<li>|</li>
 							<li><a  href="/login" >登录</a></li>
 						</ul>
