--- a/templates/regeister.html
+++ b/templates/regeister.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="content-type" content="text/html;charset=utf-8">
+		<meta content="always" name="referrer">
+        <meta name="theme-color" content="#2932e1">
+        <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon" />
     <title>Title</title>
 </head>
 <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js">
