--- a/templates/checked_orders.html
+++ b/templates/checked_orders.html
@@ -803,7 +803,7 @@ nav {
         	<nav class="nav">
 			<div class="nav_black">
 					<ul class="nav_black_left">
-						<li><a href="/" target="_blank">并夕夕商城</a></li>
+						<li><a href="/">并夕夕商城</a></li>
 						<li>|</li>
 
 						<li><a href="">问题反馈</a></li>
@@ -1084,7 +1084,7 @@ else{
                       var ss = ' <tr class="goods"  id="'+data.data[i].orders_id+'">\n' +
                           '                    <td>\n' +
 
-                          '                        <div><img src="/'+data.data[i].main_pic_addr+'" alt=""/></div>\n' +
+                          '                        <div><img src="http://www.yangyangzijun.top/'+data.data[i].main_pic_addr+'" alt=""/></div>\n' +
                           '                    </td>\n' +
                           '                    <td><a >'+data.data[i].goods_name+'</a></td>\n' +
                           '                    <td><a class="price">'+data.data[i].goods_price+'</a></td>\n' +
