--- a/templates/goodsDetails.html
+++ b/templates/goodsDetails.html
@@ -5,21 +5,21 @@
 <head>
 
 	<meta charset="UTF-8">
-	<script src="static/js/jquery-1.11.3.js" type="text/javascript" charset="utf-8"></script>
-	<script src="static/js/index_jquey.js" type="text/javascript" charset="utf-8"></script>
-	<script src="static/js/mian.js" type="text/javascript" charset="utf-8"></script>
-	<script type="text/javascript" src="static/js/indexData.js"></script>
-	<script type="text/javascript" src="static/js/jquery.js"></script>
-	<script type="text/javascript" src="static/js/index.js"></script>
+	<script src="http://www.yangyangzijun.top/static/js/jquery-1.11.3.js" type="text/javascript" charset="utf-8"></script>
+	<script src="http://www.yangyangzijun.top/static/js/index_jquey.js" type="text/javascript" charset="utf-8"></script>
+	<script src="http://www.yangyangzijun.top/static/js/mian.js" type="text/javascript" charset="utf-8"></script>
+	<script type="text/javascript" src="http://www.yangyangzijun.top/static/js/indexData.js"></script>
+	<script type="text/javascript" src="http://www.yangyangzijun.top/static/js/jquery.js"></script>
+	<script type="text/javascript" src="http://www.yangyangzijun.top/static/js/index.js"></script>
 
-	<link rel="stylesheet" type="text/css" href="static/css/main.css">
+	<link rel="stylesheet" type="text/css" href="http://www.yangyangzijun.top/static/css/main.css">
 	<link rel="stylesheet" type="text/css" href="static/css/reset.css">
 
-	<link rel="stylesheet" type="text/css" href="static/css/nav.css">
-	<link rel="stylesheet" type="text/css" href="static/css/fixedMenu.css">
+	<link rel="stylesheet" type="text/css" href="http://www.yangyangzijun.top/static/css/nav.css">
+	<link rel="stylesheet" type="text/css" href="http://www.yangyangzijun.top/static/css/fixedMenu.css">
 	<link rel="stylesheet" type="text/css" href="static/css/base.css">
-	<link rel="shortcut icon" href="static/img/index/favicon.ico">
-	<link rel="stylesheet" type="text/css" href="static/css/index_1.css">
+	<link rel="shortcut icon" href="http://www.yangyangzijun.top/static/img/index/favicon.ico">
+	<link rel="stylesheet" type="text/css" href="http://www.yangyangzijun.top/static/css/index_1.css">
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
 		<meta content="always" name="referrer">
         <meta name="theme-color" content="#2932e1">
@@ -78,7 +78,7 @@ top: 50px;
 <nav class="nav">
 			<div class="nav_black">
 					<ul class="nav_black_left">
-						<li><a href="/" target="_blank">并夕夕商城</a></li>
+						<li><a href="/" >并夕夕商城</a></li>
 						<li>|</li>
 {#						<li><a href="">可乐</a></li>#}
 {#						<li>|</li>#}
@@ -399,8 +399,8 @@ else{
                     {
                         kk += '<span class="star" style= "color:orange;" >★</span>'
                     }
-                    var m='<div class="body">'+
-                        '<div class="top">'+
+                    var m='<div class="body" style="margin: 50 auto">'+
+                        '<div class="top" >'+
                             '<div class="top_1">'+
 		                        '<a>'+data_1.data[i].username+'</a>'+
                             '</div>'+
@@ -445,10 +445,10 @@ else{
                  var ppp  = ""
 					for(var i=0;i<data_1.photo.length;i++)
                     {
-                        ppp+='<li class="zoomToolbtns"> <a id="'+i+'"> <img class="zoomToolbtnPic" " src= "/'+data_1.photo[i]+'"> </a></li>';
+                        ppp+='<li class="zoomToolbtns"> <a id="'+i+'"> <img class="zoomToolbtnPic" " src= "http://www.yangyangzijun.top//'+data_1.photo[i]+'"> </a></li>';
                     }
                     $("#zoomToolbtnsFBox").replaceWith(ppp)
-                    var dfo ='<img src="/'+data_1.photo[0]+'"  > <div id="square"></div>';
+                    var dfo ='<img src="http://www.yangyangzijun.top/'+data_1.photo[0]+'"  > <div id="square"></div>';
 
 
 					document.getElementById("originalPicBox").innerHTML =  dfo;
