--- a/templates/lop.html
+++ b/templates/lop.html
@@ -780,12 +780,12 @@ nav {
 <html>
 <head>
 	<meta charset="UTF-8">
-	<script src="static/js/jquery-1.11.3.js" type="text/javascript" charset="utf-8"></script>
-	<script src="static/js/index_jquey.js" type="text/javascript" charset="utf-8"></script>
-	<script src="static/js/mian.js" type="text/javascript" charset="utf-8"></script>
-	<script type="text/javascript" src="static/js/indexData.js"></script>
-	<script type="text/javascript" src="static/js/jquery.js"></script>
-	<script type="text/javascript" src="static/js/index.js"></script>
+	<script src="http://www.yangyangzijun.top/static/js/jquery-1.11.3.js" type="text/javascript" charset="utf-8"></script>
+	<script src="http://www.yangyangzijun.top/static/js/index_jquey.js" type="text/javascript" charset="utf-8"></script>
+	<script src="http://www.yangyangzijun.top/static/js/mian.js" type="text/javascript" charset="utf-8"></script>
+	<script type="text/javascript" src="http://www.yangyangzijun.top/static/js/indexData.js"></script>
+	<script type="text/javascript" src="http://www.yangyangzijun.top/static/js/jquery.js"></script>
+	<script type="text/javascript" src="http://www.yangyangzijun.top/static/js/index.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="static/css/main.css">
 	<link rel="stylesheet" type="text/css" href="static/css/reset.css">
@@ -802,7 +802,7 @@ nav {
     	<nav class="nav">
 			<div class="nav_black">
 					<ul class="nav_black_left">
-						<li><a href="/" target="_blank">并夕夕商城</a></li>
+						<li><a href="/" >并夕夕商城</a></li>
 						<li>|</li>
 {#						<li><a href="">可乐</a></li>#}
 {#						<li>|</li>#}
@@ -987,7 +987,7 @@ else{
 
         $(".zoomToolbtnPic").live('mousemove',function () {
 
-             var dfo ='<img src="'+$(this).attr("src").toString()+'"  > <div id="square"></div>';
+             var dfo ='<img src="http://www.yangyangzijun.top/'+$(this).attr("src").toString()+'"  > <div id="square"></div>';
 
 					document.getElementById("originalPicBox").innerHTML =  dfo;
 
@@ -1051,8 +1051,8 @@ alert($(this).html())
 
         <div id="footer"></div>
 
-        <script src="js/jquery-1.11.3.js"></script>
-        <script src="js/shoppingcart.js"></script>
+        <script src="http://www.yangyangzijun.top/js/jquery-1.11.3.js"></script>
+        <script src="http://www.yangyangzijun.top/js/shoppingcart.js"></script>
 
     </body>
     <script>
@@ -1196,7 +1196,7 @@ alert($(this).html())
                           '                        <input type="checkbox"  name="ko"' +
                           ' value="'+data.data[i].orders_id+'"/>\n' +
                           '                        <input type="hidden" value="1" />\n' +
-                          '                        <div><img src="/'+data.data[i].main_pic_addr+'" alt=""/></div>\n' +
+                          '                        <div><img src="http://www.yangyangzijun.top/'+data.data[i].main_pic_addr+'" alt=""/></div>\n' +
                           '                    </td>\n' +
                           '                    <td><a >'+data.data[i].goods_name+'</a></td>\n' +
                           '                    <td><a class="price">'+data.data[i].goods_price+'</a></td>\n' +
